--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https:/Darshana748.github.io/Shopping-App",
+  "homepage": "https://Darshana748.github.io/Shopping-App",
   "name": "shopping",
   "version": "0.1.0",
   "private": true,
